<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/note_edit_placeholder"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupImportance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNote"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButtonLow"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/light_green"
            android:text="@string/importance_low_text" />

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/light_orange"
            android:text="@string/importance_medium_text" />

        <RadioButton
            android:id="@+id/radioButtonHigh"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/light_red"
            android:text="@string/importance_high_text" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSaveNote"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:onClick="SendNotes"
        android:text="@string/save_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupImportance" />
</androidx.constraintlayout.widget.ConstraintLayout>